# umbra

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
.github/workflows/: deploy.yaml  deploy.yml  docs.yml  tests.yml
dev/devenv/: .env.devenv  .shell.devenv
dev/zellij/: default.kdl
docs/: Getting started.md  Modules.md  index.md  violet.json
docs/examples/zellij/: Modular private template repo.md
docs/modules/: README.md  _template.md  devenv.md  localrc.md  pty.md  watch.md  zellij.md
docs/special/: Templating.md
scripts/: install.sh
share/umbra/wrangler/: .zshrc
shell/: hook.sh
shell/wrangler/: .bashrc  .zshrc
src/: CMakeLists.txt
src/stc/: Colour.hpp  README.md
src/umbra/: Main.cpp  ModuleLoader.cpp  ModuleLoader.hpp
src/umbra/cli/: ParseTransformValidator.hpp
src/umbra/except/: ErrorCode.hpp  Exception.cpp  Exception.hpp
src/umbra/modules/: DevenvModule.cpp  DevenvModule.hpp  Module.cpp  Module.hpp  PtyModule.cpp  PtyModule.hpp  WatchModule.cpp  WatchModule.hpp  ZellijModule.cpp  ZellijModule.hpp  include.hpp
src/umbra/modules/devenv/: ConfigSpec.cpp  ConfigSpec.hpp
src/umbra/modules/meta/: MetaModule.cpp  MetaModule.hpp
src/umbra/sys/: FSWatcher.hpp
src/umbra/util/: FilesystemExt.cpp  FilesystemExt.hpp  JSONCParser.hpp  Parse.cpp  Parse.hpp
src/umbra/wranglers/: Shell.cpp  Shell.hpp
tests/: CMakeLists.txt
tests/src/: Main.cpp
tests/src/modules/: DevenvModuleTests.cpp  ZellijModuleTests.cpp
tests/src/modules/devenv/: ConfigTests.cpp
tests/src/testutil/: Env.hpp
tests/src/testutil/selftest/: EnvTests.cpp
tests/src/util/: JSONCParserTests.cpp  ParseTests.cpp
